tests/expected_invalid_affine_after_wrapper_move.diag.out
<input>:17:5: error: affine value 'receipt' was already moved
        receipt
        ^^^^^^^
<input>:16:31: note: 'receipt' was previously moved here
        let envelope = Envelope { receipt };
                                  ^^^^^^^
